<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewEvent">


    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_alignParentTop="true"
        android:textSize="24sp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/titleHint" />

    <TextView
        android:id="@+id/textChooseArea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextTitle"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:textSize="16sp"
        android:text="@string/choose_an_area" />

    <View
        android:id="@+id/line1"
        android:layout_below="@+id/textChooseArea"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <RadioGroup
        android:id="@+id/eventCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line1"
        android:orientation="horizontal"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true" >
        <RadioButton
            android:id="@+id/direct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/direct" />
        <RadioButton
            android:id="@+id/indirect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/indirect" />

        <RadioButton
            android:id="@+id/personal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personal" />

        <RadioButton
            android:id="@+id/selfDev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/self_dev" />

        <RadioButton
            android:id="@+id/etc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/etc" />
    </RadioGroup>

        <View
            android:id="@+id/line2"
            android:layout_below="@+id/eventCategory"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

    <EditText
        android:id="@+id/editTextActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/eventCategory"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:ems="12"
        android:hint="@string/activityHint"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextActivity"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:textSize="16sp"
        android:text="@string/date" />

    <TextView
        android:id="@+id/enterDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/date"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:onClick="showDatePickerDialog"
        android:textSize="16sp"
        android:text="@string/defaultDate" />

        <View
            android:id="@+id/line3"
            android:layout_below="@+id/date"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginVertical="3dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line3"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:textSize="16sp"
        android:text="@string/start" />

    <TextView
        android:id="@+id/enterStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/start"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:textSize="16sp"
        android:onClick="showTimePickerDialog"
        android:text="@string/defaultStart" />

    <TextView
        android:id="@+id/end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/start"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:textSize="16sp"
        android:text="@string/end" />

    <TextView
        android:id="@+id/enterEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/end"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginVertical="3dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:textSize="16sp"
        android:onClick="showTimePickerDialog"
        android:text="@string/defaultEnd" />

        <View
            android:id="@+id/line5"
            android:layout_below="@+id/end"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginVertical="3dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

    <EditText
        android:id="@+id/editTextLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line5"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/lableHint" />

    <EditText
        android:id="@+id/editTextNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextLabel"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/noteHint" />


</RelativeLayout>