<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/scheduleCardID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <TextView
                android:id="@+id/itemCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="@string/categoryText"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/itemDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/itemCategory"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:textSize="18sp"
                android:text="@string/descriptionText" />

            <TextView
                android:id="@+id/itemTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/itemDescription"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:textSize="20sp"
                android:text="@string/timeText" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>