<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"

    android:background="@color/colorPrimary"
    >

    <TextView
        android:id="@+id/itemCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/categoryText"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="25sp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="3dp"
        android:textColor="@color/colorText"/>

    <TextView
        android:id="@+id/itemDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/itemCategory"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:text="@string/descriptionText"
        android:layout_marginHorizontal="10dp"
        android:textColor="@color/colorAccent"
        android:layout_marginVertical="3dp"
        />

    <TextView
        android:id="@+id/itemTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/itemDescription"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:text="@string/timeText"
        android:layout_marginHorizontal="10dp"
        android:textColor="@color/colorAccent"
        android:layout_marginVertical="3dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/itemTime"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="3dp"
        android:layout_marginBottom="3dp"
        android:text="Here we are today, looking at a beautiful app. This popup will ideally have enough stuff to at least fill about a third of the screen. Perhaps some analytics and maybe detailed descriptions. This text here is just to see what it might look like. Exciting isn't it, to know that you are one of the few that will ever read or even see this small bit of literature. Thank you and goodbye."
        android:textColor="@color/colorAccent" />

</RelativeLayout>
